# pptx-extractor

./: .gitignore  README.md  pyproject.toml
src/pptx-extractor/: extractor.py
